--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 22
     buildToolsVersion "21.1.2"
     defaultConfig {
         applicationId 'org.almotech.oscal'
-        minSdkVersion 8
-        targetSdkVersion 21
+        minSdkVersion 14
+        targetSdkVersion 22
     }
     buildTypes {
         release {
@@ -19,8 +19,16 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.android.support:cardview-v7:21.0.+'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
     // Version 1.2.3 has a bug and crashes when detecting 2-finger gestures. Use 1.2.2 instead.
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.github.chrisbanes.photoview:library:1.2.2'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+
+    compile 'com.squareup:otto:1.3.6'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
+
 }
