--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:cardview-v7:22.0.0'
@@ -27,8 +27,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.github.chrisbanes.photoview:library:1.2.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-
     compile 'com.squareup:otto:1.3.6'
     compile 'com.android.support:recyclerview-v7:22.0.0'
-
+    compile 'com.google.code.gson:gson:2.3.1'
 }
