--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.squareup:otto:1.3.6'
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile files('libs/osmdroid-android-4.1.jar')
+    compile files('libs/slf4j-android-1.5.8.jar')
 }
